--- a/2022-06-13.md
+++ b/2022-06-13.md
@@ -97,7 +97,10 @@ Author of `The Art of Unit-Testing`
 Waterfall Pipelines ->  Cooperative Pipelines
 
 There are a lot of automatic pipelines in organization but not as many continuous delivery.
-Theory of constrains from the book `The Goal`/`Critical Chain`/`Beyond the Goal`.
+Theory of constrains from the 
+```
+books: The Goal, Critical Chain, Beyond the Goal
+```
 Bottlenecks: Permissions, Knowledge, ...
 The fours questions:
 1. What is the power if the technology?
@@ -192,7 +195,9 @@ Shu Ha Ri.
 Learn Detach Transcent.
 What is Zen: the state of calm attentiveness in which one's... 
 You become one with the code, lost at the rhythm of the task at hand.
-`Become a techical leader` book.
+```
+book: Become a technical leader 
+```
 There are point in time where you suddenly get a lot better.
 It's actually not that sudden.
 It happens when you learn a new idea.
@@ -408,7 +413,9 @@ Team might have a high fluctuation.
 Quantifying technical debt via static analysis, it's not actionable.
 Tech debt can not be prioritized from code alone.
 How to prioritize.
-Book software design x-rays.
+```
+Book: software design x-rays
+```
 -> Behavior Code Analysis.
 
 Version Control - A Behavior Data Source.
