--- a/2022-06-14.md
+++ b/2022-06-14.md
@@ -33,7 +33,9 @@ An error of assumption.
 
 A perfect program can not not be perfect if executed by an imperfect implementation.
 
+```
 Book: Beautiful Code
+```
 
 > If a programmer can simulate a construct faster than the compiler can implement it... 
 
@@ -276,7 +278,9 @@ Augmented Reality in realastate.
 Experiment: Bat and the ball cost 1.10$ the bat is 1$ more expensive than the ball?
 How Many cost the ball? 
 5cent.
-Book: `Thinking. Fast... Slow`.
+```
+Book: Thinking. Fast... Slow
+```
 We often need to think fast.
 Because it make us survive.
 Stereotyping and shortcuts is what helps us.
@@ -290,8 +294,12 @@ Game: 3 things in 1 Minute.
 Psychology: has a lot of sub categories.
 Cognitive Psychology, is used by behavioral economic.
 This can be used to hack human brains/decision making.
-Book: Predictable Irrational.
-Book: Nudge.
+```
+Book: Predictable Irrational
+```
+```
+Book: Nudge
+```
 We have bugs about decision making.
 
 We also have bugs in perceptions.
@@ -335,7 +343,9 @@ Designer needs to know human psychology.
 There is the role Chief Behavior Officer.
 Talk: How behavior economics explains agile.
 
-Book: Digital Nudge.
+```
+Book: Digital Nudge
+```
 
 2 Roles
 1. Digital Decision Architect: Nudge for Good
@@ -641,4 +651,6 @@ Some jokes are only funny the first time.
 * Common animosity
 * ...
 
+```
 Book: Retrospectives Anti-pattern
+```
