--- a/2022-06-15.md
+++ b/2022-06-15.md
@@ -71,10 +71,14 @@ What is actually needed.
 <img style="height: 300px;" src="computing_knows.png" />
 
 IBM Autonomic Computing principals.
-Book: **Engineering a Safer world**.
+```
+Book: Engineering a Safer world
+```
 
 Deep conservative pragmatism hold back the future.
-Book: **Thinking fast and flow*.
+```
+Book: Thinking fast and flow
+```
 
 Expository Fiction: 
 * System 1 quick via correlation. 
@@ -101,7 +105,9 @@ The Pledge of a real Engineer: The software must not harm or fail.
 
 What ever we do, are we thriving to get better engineering.
 
-Book: **Software Engineering at Google**.
+```
+Book: Software Engineering at Google
+```
 Software engineering at scale.
 In software we often turn bricks into steel, which is not ideal.
 We might better invent a much better programming language to handle the complexity.
@@ -244,13 +250,17 @@ Intentions.
 
 Same is true for tests.
 
-Book: 97 Things every java programmer should know.
+```
+Book: 97 Things every java programmer should know
+```
 
 What is a passing test telling us, what is a failing test tells us?
 Failing test should tell us exactly what is the failure and the cause of it, so we do not need to spend a lot of time analyzing.
 Each test should test one thing, can have several assertions though.
 
-Book: Use Testing to develop better software faster.
+```
+Book: Use Testing to develop better software faster
+```
 
 Use meaningful descriptive names.
 Meaningful: don't describe what the test does, tell us why!
@@ -366,13 +376,17 @@ Some one proposed it.
 Someone agreed it. 
 Someone built it.
 
-Book: Ruined by Design.
+```
+Book: Ruined by Design
+```
 
 How can I act for users of I feel helpless?
 I need to feel empowered.
 I need empathy and mindfulness.
 
-Book: Badass, make users feel empowered.
+```
+Book: Badass, make users feel empowered
+```
 
 Have a design system.
 Do user centered design.
@@ -393,9 +407,12 @@ If you scale it gets harder.
 
 > Companies above 1000 people will not need client at all.
 
-Books: Dynamic ReTeaming, Team Topologies, Investments unlimited.
-
 <img style="height: 300px;" src="dx_books.png" />
+
+```
+Books: Dynamic ReTeaming, Team Topologies, Investments unlimited
+```
+
 
 Every improvement turns out as an additional check.
 All these increase cognitive load.
