Correct some typos

--- a/2022-06-13.md
+++ b/2022-06-13.md
@@ -12,27 +12,29 @@ by Eric Johnson
 
 How we treat each other in tech.
 Eric is an developer advocate for AWS.
-He initially was a drummer and a dead of 5 kids.
+He initially was a drummer and is a dad of 5 kids.
 He tells a story about his children: in essence every one want to be valued on a inspiring mission.
-We fail a promoting people as valued members.
+We fail at promoting people as valued members.
 
-How to we estimate value? Our own and the value of others.
-He tells another story: describes how his values shifts during how is is being handled by turkey customs.
+How do we estimate value? 
+Our own and the value of others.
+He tells another story: describes how his values shifts during how is is being handled by Turkish customs.
 Our value is often assessed by external things.
 Some time we value ourselves more than others, but actually we are all equal.
-If we don't really think like this we tent to treat others badly.
+If we don't really think like this we tend to treat others badly.
 We overvalue ourselves and think because we are better in things we are a better human, which is not the case.
-When you are the smarted in the room, change the room.
-If you are the dumbest in the room, you learn the most.
+
+> When you are the smarted in the room, change the room.
+> If you are the dumbest in the room, you learn the most.
 
 Some times we undervalue ourselves.
 He tells another story how he was devalued.
 We underestimate the power of words.
 Expression of opinions that do no good to anyone should be avoided.
-Picking word should be done wisely because they will affect people.
+Picking words should be done wisely because they will affect people.
 What are the words that get my message across but don't attack.
 
-Social media take away the ability for 3 dimensional discourse.
+Social media takes away the ability for 3 dimensional discourse.
 No one goes to social media to get an opinion but to given one.
 Social media is a 2 dimensional conversation.
 Body language and context is missing from it.
@@ -54,7 +56,7 @@ Behind every product there are people.
 
 James Ward
 
-What is modern: it a spectrum.
+What is modern: it's a spectrum.
 There a small steps and leaps.
 
 Java 11 Features:
@@ -94,7 +96,7 @@ Roy Osherove
 
 Author of `The Art of Unit-Testing`
 
-Waterfall Pipelines ->  Cooperative Pipelines
+Waterfall Pipelines -> Cooperative Pipelines
 
 There are a lot of automatic pipelines in organization but not as many continuous delivery.
 Theory of constrains from the 
@@ -102,9 +104,9 @@ Theory of constrains from the
 books: The Goal, Critical Chain, Beyond the Goal
 ```
 Bottlenecks: Permissions, Knowledge, ...
-The fours questions:
-1. What is the power if the technology?
-2. What limitation/restriction/constraint dies is decrease?
+The four questions
+1. What is the power of the technology?
+2. What limitation/restriction/constraint does it decrease?
 3. What rule/processes helped us accommodates the limitation until now?
 4. What rules should we use now instead?
 
@@ -115,7 +117,7 @@ Limitations from the manual world:
 * who knows how to run tests
 * ...
 
-We did not know if we could not know in demand to know id the software could be released.
+We did not know, if we could on demand know, if the software could be released.
 So rules resulting from that:
 * run the slow test manually
 * only run the tests on one branch
@@ -136,7 +138,7 @@ What do pipeline offers us:
 New technologies but still the old rules.
 Take the people out of the equation.
 People should add test into the pipeline to teach the pipeline to make decision.
-This will lead to a Coops-Pipeline.
+This will lead to a Coop-Pipeline.
 
 Netflix's journey:
 2013 branch per environment.
@@ -191,8 +193,8 @@ Personal journey into writing code.
 Being a travelist. 
 Being a codist: those who code to fully experience a new...
 It's all about learning.
-Shu Ha Ri.
-Learn Detach Transcent.
+`Shu Ha Ri`.
+Learn Detach Transcend.
 What is Zen: the state of calm attentiveness in which one's... 
 You become one with the code, lost at the rhythm of the task at hand.
 ```
@@ -226,16 +228,16 @@ It about the process in your head.
 Kent back said.
 > I'm not going too refactor the code yet because the code doesn't know yet where it wants to go.
 
-Programming does not fir well in time boxes.
+Programming does not work well in time boxes.
 
-How does a programmers kind works.
+How does a programmers mind works.
 It does not work from 9-5.
 Programming can be addictive.
 
-Alistar Cockburn
+Alistair Cockburn
 > Always travel light.
 
-Developers are drawn to complicity, like moth to flames, often with the same result.
+Developers are drawn to complexity, like moth to flames, often with the same result.
 
 > We might need this in the future.
 
@@ -245,7 +247,7 @@ Developers are drawn to complicity, like moth to flames, often with the same res
 
 > ...
 
-Hofstaders Law
+[Hofstaders Law](https://en.wikipedia.org/wiki/Hofstadter%27s_law)
 
 > It always take longer than you expect.
 
@@ -266,7 +268,7 @@ Naming:
 Do not put type information into the naming.
 Do not repeat class name in functions of that class.
 
-> The mist secure code is no code.
+> The most secure code is no code.
 
 Architecture: 
 The Architecture that is most adoptable to change will survive.
@@ -281,14 +283,14 @@ BYE-BYE-DI.
 Can add complexity.
 Monadic code can become complex.
 When is a test a unit test?
-If it can not run in parallel it's not one*.
+If it can't run in parallel it's not one*.
 Test give confidence.
 We don't debug our code anymore, we just re-run our tests.
 
 Testing as a design.
 Design is the progressive elimination of ambiguity.
 Start with the assumption that you are wrong.
-Write the test to show that it's write.
+Write the test to show that it's right.
 Write failure test cases first.
 Test code is code too.
 It also needs to be maintained.
