Fix usd formating

--- a/2022-06-14.md
+++ b/2022-06-14.md
@@ -275,9 +275,9 @@ Alibaba digital shopping.
 We need to be conscious about our decisions.
 Augmented Reality in realastate. 
 
-Experiment: Bat and the ball cost 1.10$ the bat is 1$ more expensive than the ball?
+Experiment: Bat and the ball cost 1.10 USD the bat is 1 USD more expensive than the ball?
 How Many cost the ball? 
-5cent.
+5 cent.
 ```
 Book: Thinking. Fast... Slow
 ```
